Borre simbolos extraños en el index
Porque puedo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <p class="p1"><span class="s1"></span><br></p>
-<p class="p2"><span class="s1">&lt;p&gt;Este es mi parrafo&lt;/p&gt;</span></p>
-<p class="p2"><span class="s1">&lt;h2&gt;Mi titulo&lt;/h2&gt;</span></p>
+<p class="p2"><span class="s1">Este es mi parrafo</span></p>
+<p class="p2"><span class="s1">Mi titulo</span></p>
 </body>
 </html>
